# cargo-lint-extra

./: .cargo-lint-extra.toml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/commands/: implement-issue.md
.claude/scripts/: load-issue-context.sh
.github/workflows/: release.yml
src/: config.rs  config_test_overrides.rs  diagnostic.rs  engine.rs  lib.rs  main.rs  rule_registry.rs  suppression.rs  test_detection.rs
src/rules/: mod.rs
src/rules/ast/: allow_audit.rs  clone_density.rs  collect_then_iterate.rs  glob_imports.rs  magic_numbers.rs  magic_numbers_tests.rs  mod.rs  string_alloc_in_loop.rs  undocumented_panic.rs  verbose_result_handling.rs  verbose_result_handling_tests.rs
src/rules/text/: file_header.rs  file_length.rs  inline_comments.rs  line_length.rs  (+6 more)
tests/: cli_test.rs  glob_imports_test.rs  int_allow_audit.rs  int_clone_density.rs  int_collect_then_iterate.rs  int_file_length.rs  int_general.rs  int_inline_comments.rs  int_line_length.rs  int_magic_numbers.rs  int_redundant_comments.rs  int_string_alloc_in_loop.rs  int_suppression.rs  int_test_overrides.rs  int_todo_comments.rs  int_undocumented_panic.rs  int_verbose_result_handling.rs  integration_test.rs
tests/fixtures/: allow_attrs.rs  clean.rs  clone_density.rs  collect_then_iterate.rs  glob_imports.rs  hard_limit_line.rs  inline_comments.rs  long_lines.rs  magic_numbers.rs  redundant_comments.rs  string_alloc_in_loop.rs  suppressed.rs  todos.rs  undocumented_panic.rs  verbose_result_handling.rs
tests/test_helpers/: mod.rs
(+2 files in other folders)
