[package]
name = "cargo-lint-extra"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/cargo-lint-extra"
description = "Configurable, extensible linting rules for Rust projects beyond rustfmt and Clippy"
keywords = ["lint", "clippy", "code-quality", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "visit"] }
miette = { version = "7", features = ["fancy"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
rayon = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
